# Commercial_building_DER_optimization

./: .env.example  .gitignore  CONTEXT.md  DER_SAVINGS_DEEP_DIVE.md  Dockerfile  PLAN.md  README.md  TASKS.md  docker-compose.yml  download_data.py  production_grade_strategy.md  pyproject.toml  recommendation_tariff_control.md
AI_chat_log/: plan-tasks-creation.md
agents/: data_agent.py  optimizer_agent.py  orchestrator.py  report_agent.py  tariff_agent.py  thermal_agent.py
analysis/: bill_calculator.py  control_strategy.py  cost_driver.py  savings_calculator.py  tariff.py
api/: main.py  schemas.py
data/meter/: school_ca_15min.parquet
data/solar/: pvwatts_100kw_socal.csv
data/tariff/: sce_tou_gs3.json
models/: battery_model.py  optimizer.py  solar_model.py  thermal_model.py
notebooks/: analysis.ipynb
scripts/: analysis_deep_dive.py  build_notebook.py  download_data.py  find_nb_cell.py  gen_waterfall.py  verify_data_2023.py  verify_milp_savings.py
streamlit_app/: app.py
tests/: test_api.py
